--- a/1-start/css/styles.css
+++ b/1-start/css/styles.css
@@ -22,7 +22,7 @@ html, body {
 .main {
     position: absolute;
     top: 25%;
-    left: 25%;
+    left: 16%;
     color: white;
     font-family: 'Open Sans';
     text-transform: uppercase;
@@ -76,16 +76,34 @@ html, body {
     z-index: 5;
 }
 
-.days {
+.zero--three {
+    position: absolute;
+    bottom: 0rem;
+    left: 7.5rem;
+    height: 4rem;
+    width: 4rem;
+    background-color: inherit;
+    border: 1rem solid white;
+    border-radius: 50%;
+    box-shadow: 0 0 0.5rem gray;
+    z-index: 3;
+
+
+}
+
+.day {
     font-size: 2.8rem;
     font-weight: 700;
     line-height: 2.3rem;
-    margin-left: -0.2rem;
+    margin-left: 2rem;
     letter-spacing: 0.25rem;
+    text-align: center;
+    padding-top: 1rem;
 }
 
 .title {
     font-weight: 300;
     line-height: 1rem;
-    margin-left: 0.2rem;
+    margin-left: 2rem;
+    padding-top: 1rem;
 }
