--- a/3-pyramid/css/styles.css
+++ b/3-pyramid/css/styles.css
@@ -47,13 +47,68 @@
 .sun {
   position: absolute;
   background-color: rgb(255,239,0);
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 5rem;
+  width: 5rem;
   border-radius: 50%;
   top: 0.625rem;
   left: 4.375rem;
   transform-origin: 50% 400%;
   animation: raiseandset 4s cubic-bezier(0.4, 0, 0.49, 1) infinite;
+}
+
+.left-eye {
+  position: absolute;
+  background-color: black;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  top: 1.5rem;
+  left: 1.0rem;
+  transform-origin: 50% 400%;
+}
+
+.left-eyebrow {
+  position: absolute;
+  background-color: black;
+  height: .2rem;
+  width: 1rem;
+  top: 1rem;
+  left: 1.0rem;
+  transform-origin: 50% 400%;
+  transform: rotate(-30deg);
+}
+
+.right-eye {
+  position: absolute;
+  background-color: black;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  top: 1.5rem;
+  left: 3.0rem;
+  transform-origin: 50% 400%;
+}
+
+.right-eyebrow {
+  position: absolute;
+  background-color: black;
+  height: .2rem;
+  width: 1rem;
+  top: 1rem;
+  left: 3rem;
+  transform-origin: 50% 400%;
+  transform: rotate(30deg);
+}
+
+.mouth {
+  position: absolute;
+  background-color: black;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  top: 3rem;
+  left: 1.75rem;
+  transform-origin: 50% 400%;
 }
 
 .sand {
@@ -91,18 +146,18 @@
 @keyframes raiseandset {
   0% {
     background-color: #F57209;
-    transform: rotate(-70deg);
+    transform: rotate(70deg);
   }
   30% {
     background-color: rgb(255,239,0);
-    transform: rotate(-20deg);
+    transform: rotate(20deg);
   }
   70% {
     background-color: rgb(255,239,0);
   }
   100% {
     background-color: #F57209;
-    transform: rotate(70deg);
+    transform: rotate(-70deg);
   }
 }
 
